--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -769,10 +769,13 @@ a.dt-button.active:not(.disabled) {
 .logo {
   background: #343957;
   display: inline-block;
-  padding: 15px 0;
+  padding: 15px 8px;
   text-align: center;
-  width: 250px;
+  width: 200px;
   transition: width 300ms ease-in-out;
+}
+.logo img{
+  width: 100%;
 }
 .logo span {
   color: rgba(160, 180, 200, 0.85);
